--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jrgregory/contao-college-vue",
+    "name": "jrgregory/ dcontao-vue-college",
     "type": "contao-module",
     "description": "Basic installation for the Contao College Vue.",
     "license": "CC-BY-SA-4.0",
